@@ -189,7 +189,7 @@ public class TestSolrConfigHandler extends RestTestBase {
         10);
 
     payload = "{\n" +
-        "'update-requesthandler' : { 'name' : '/x', 'class': 'org.apache.solr.handler.DumpRequestHandler' , 'startup' : 'lazy' , 'a':'b' , 'defaults': {'def_a':'def A val'}}\n" +
+        "'update-requesthandler' : { 'name' : '/x', 'class': 'org.apache.solr.handler.DumpRequestHandler' , 'startup' : 'lazy' , 'a':'b' , 'defaults': {'def_a':'def A val', 'multival':['a','b','c']}}\n" +
         "}";
     runConfigCommand(writeHarness, "/config?wt=json", payload);
 
@@ -207,6 +207,14 @@ public class TestSolrConfigHandler extends RestTestBase {
         cloudSolrServer,
         Arrays.asList("getdefaults", "def_a"),
         "def A val",
+        10);
+
+    testForResponseElement(writeHarness,
+        testServerBaseUrl,
+        "/x?wt=json&param=multival&json.nl=map",
+        cloudSolrServer,
+        Arrays.asList("params", "multival"),
+        Arrays.asList("a", "b", "c"),
         10);
 
     payload = "{\n" +
